completer la formation sage comptabilite

--- a/src/app/client/accueil/accueil.component.html
+++ b/src/app/client/accueil/accueil.component.html
@@ -8,7 +8,7 @@
   </div>
   <div id="footer-bar" class="footer-bar-5">
     <a href="contact"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
-    <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
+    <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Téléchargement</span></a>
     <a href="/" class="active-nav"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="/formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
     <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
@@ -39,7 +39,7 @@
   <div class="card-bottom">
   <h1 class="font-24 font-700">Formation video</h1>
   <p class="boxed-text-xl">
-  Apprener a maitriser les logiciels que vous telechargé.
+  Apprenez a maitriser les logiciels que vous téléchargez.
   </p>
   </div>
   <div class="card-overlay bg-gradient-fade"></div>
@@ -47,9 +47,9 @@
   </div>
   <div class="card rounded-l shadow-l" data-card-height="320">
   <div class="card-bottom">
-  <h1 class="font-24 font-700">Telechargement</h1>
+  <h1 class="font-24 font-700">Téléchargement</h1>
   <p class="boxed-text-xl">
-    Telecharger des milliers de logiciels gratuitement.
+    Télécharger des milliers de logiciels gratuitement.
   </p>
   </div>
   <div class="card-overlay bg-gradient-fade"></div>
@@ -59,7 +59,7 @@
   <div class="content mt-0">
   <div class="row">
     <div class="col-6">
-      <a href="/telechargement" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Telechargerment</a>
+      <a href="/telechargement" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Téléchargement</a>
       </div>
       <div class="col-6">
       <a href="/formation" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Formation Video</a>
@@ -72,13 +72,7 @@
       <a href="#" class="btn btn-full btn-border btn-m rounded-s text-uppercase font-900 shadow-l border-highlight color-highlight">Forums</a>
       </div>
 
-      <p><br></p>
-      <div class="col-6">
-          <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight" data-menu="menu-signin">Se connecter</a>
-          </div>
-          <div class="col-6">
-          <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight" data-menu="menu-signup">S'inscrire</a>
-          </div>
+
   </div>
   </div>
 
@@ -101,9 +95,9 @@
     </div>
   <div class="card card-style">
     <div class="content text-center">
-    <h2>Connaitre ces trois etapes</h2>
+    <h2>Connaitre ces trois étapes</h2>
     <p class="boxed-text-xl">
-    le but de ce site est de vous aidé a gerer votre entreprise.
+    le but de ce site est de vous aidé a gérer votre entreprise.
     </p>
     </div>
     <div class="divider divider-small mb-3 bg-highlight"></div>
@@ -113,9 +107,9 @@
     <i class="far fa-star color-yellow1-dark fa-3x pt-3 icon-size"></i>
     </div>
     <div>
-    <h5 class="font-16 font-600">Telecharger les logiciels</h5>
+    <h5 class="font-16 font-600">Télécharger les logiciels</h5>
     <p>
-    les logiciels sont disponible dans la section telechargement.
+    les logiciels sont disponible dans la section téléchargement.
     </p>
     </div>
     </div>
@@ -126,7 +120,7 @@
     <div>
     <h5 class="font-16 font-600">Formation video</h5>
     <p>
-    Formez vous a maitriser les logiciels que vous telechagé sur ce site
+    Formez vous a maitriser les logiciels que vous téléchargez sur ce site
     </p>
     </div>
     </div>
