--- a/src/app/client/formation/formation-sage-comptabilite/backend/code/code.component.html
+++ b/src/app/client/formation/formation-sage-comptabilite/backend/code/code.component.html
@@ -216,3 +216,222 @@
   <br>
   <a href="#" data-menu="21" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
   </div>
+  <div id="21" class="menu menu-box-modal rounded-m" data-menu-height="460" data-menu-width="400">
+    <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/GKxHj9R38OE' frameborder='0' allowfullscreen></iframe></div>
+   <h3 class="text-center font-700 mt-3">21 : LE PLAN TIERS CRÉER, MODIFIER ET SUPPRIMER UN COMPTE DE TIERS (2/2)</h3>
+   <p class="boxed-text-l">
+   Agrandissez la video et profité
+   </p>
+   <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+   <br>
+   <a href="#" data-menu="22" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+   </div>
+   <div id="22" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/I_QioIVEi7M' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">22 : LES COLLABORATEURS CREER, MODIFIER ET SUPPRIMER UNE FICHE COLLABORATEUR
+    </h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="23" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+    <div id="23" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/dYy2HrcM7NE' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">23 : LES UTILISATEURS ET NIVEAUX D'AUTORISATION</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="24" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="24" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/2ed9iM0ZH_M' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">24 : LES DIFFERENTS TYPES DE SAISIES ET LEURS CARACTERISTIQUES</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="25" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="25" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/2urxNuhdKEo' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">25 : SAISIE DES A NOUVEAUX</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="26" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="26" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/IFeDwIGm3Jc' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">26 : SAISIE DES VENTES PAR SAISIE DES ECRITURES</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="7" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="27" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/y5ZdApKlDjE' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">27 : CREATION D'UN COMPTE EN COURS DE SAISIE</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="28" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="28" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/7lM7F4DRiQo' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">28 : ENREGISTRER UNE FACTURE DE VENTE AVEC MODE DE REGLEMENT </h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="29" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="29" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/JimV59xWrLE' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">29 : ENREGISTRER UN TICKET Z AVEC MODE DE SAISIE PAR PIECES</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="30" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="30" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/3KmhNG8LE5Y' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">30 : SAISIE DES ACHATS FACTURE AVEC ESCOMPTE</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="31" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="31" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/P48v9NT5nzs' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">31 : CONTRÔLE DU PARAMÉTRAGE DES TAUX DE TAXE</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="32" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="32" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/uPrKBDMBQv0' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">32 : SAISIE D'UNE NOTE DE FRAIS AVEC VENTILATION DES TAUX DE TVA</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="33" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="33" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/rr7bhnx6JY8' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">33 : SAISIE D'UN ACHAT INTRACOMMUNAUTAIRE ET AUTO-LIQUIDATION</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="34" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+
+    <div id="34" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/aAXp6edxfkA' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">34 : CONTRÔLE DU PARAMÉTRAGE DE LA TVA INTRACOMMUNAUTAIRE</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="35" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="35" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/kpRTKLzIUAg' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">35 : LES JOURNAUX DE SAISIE</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="36" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="36" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/ZoGZzFpTSvs' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">36 : CREATION D'UN MODÈLE DE SAISIE</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="37" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="37" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/dj6_6iyY-Ug' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">37 : UTILISATION D'UN MODÈLE DES SAISIES</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="38" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="38" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/yHtJZiAISkM' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">38 : AUTOMATISER LES CALCULS D'UN MODELE DE SAISIE</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="39" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="39" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/dWEP1B1N0xg' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">39 : CREATION D'UN MODELE D'ABONNEMENT</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="40" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
+
+    <div id="40" class="menu menu-box-modal rounded-m"  data-menu-height="460" data-menu-width="400">
+     <div class='responsive-iframe max-iframe'><iframe src='https://www.youtube.com/embed/EW63sedCKKs' frameborder='0' allowfullscreen></iframe></div>
+    <h3 class="text-center font-700 mt-3">40 : GÉNÉRER LES ÉCRITURES D'ABONNEMENT</h3>
+    <p class="boxed-text-l">
+    Agrandissez la video et profité
+    </p>
+    <a href="#"  class="close-menu btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Terminer</a>
+    <br>
+    <a href="#" data-menu="41" class="btn btn-center-m btn-sm shadow-l rounded-s text-uppercase font-900 bg-green1-dark">Suivant</a>
+    </div>
