--- a/src/app/client/formation/formation.component.html
+++ b/src/app/client/formation/formation.component.html
@@ -7,7 +7,7 @@
   </div>
   <div id="footer-bar" class="footer-bar-5">
     <a href="contact"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
-    <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
+    <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Téléchargement</span></a>
     <a href="/" ><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="/formation" class="active-nav"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
     <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
@@ -29,9 +29,9 @@
   </div>
   <div class="search-results disabled-search-list card card-style mx-0 mt-3 px-2">
   <div class="list-group list-custom-large">
-  <a href="/formation/sage-comptabilite" data-filter-item data-filter-name="sage comptabilite">
+  <a href="/formation/sage-comptabilite" data-filter-item data-filter-name="sage comptabilité">
   <i class="fa fa-file-video font-17"></i>
-  <span>Sage Comptabilite</span>
+  <span>Sage Comptabilité</span>
   <strong>formation</strong>
   <i class="fa fa-angle-right mr-2"></i>
   </a>
@@ -61,40 +61,6 @@
 
 
 
-  <div class="divider divider-margins"></div>
-  <div class="content mb-3">
-  <h5 class="float-left font-16 font-500">Browse Our Categories</h5>
-  <a class="float-right font-12 color-highlight mt-n1" href="#">View All</a>
-  <div class="clearfix"></div>
-  </div>
-  <a href="#" data-card-height="80" class="card card-style mb-3">
-  <div class="card-center">
-  <h5 class="pl-3">Mobile PWA's</h5>
-  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
-  </div>
-  <div class="card-center opacity-30">
-  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
-  </div>
-  </a>
-  <a href="#" data-card-height="80" class="card card-style mb-3">
-  <div class="card-center">
-  <h5 class="pl-3">Site Templates</h5>
-  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
-  </div>
-  <div class="card-center opacity-30">
-  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
-  </div>
-  </a>
-  <a href="#" data-card-height="80" class="card card-style mb-4">
-  <div class="card-center">
-  <h5 class="pl-3">Web Themes</h5>
-  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
-  </div>
-  <div class="card-center opacity-30">
-  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
-  </div>
-  </a>
-  <div class="divider divider-margins"></div>
   <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
